--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"version": "1.3.8",
 	"engines": {
-		"vscode": "^1.67.0"
+		"vscode": "^1.20.0"
 	},
 	"publisher": "MathWorks",
 	"author": {
@@ -331,7 +331,7 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile && cd server && npm prune --production && cd ..",
-		"compile": "tsc -p ./ && cd server && npm run compile && cd ..",
+		"compile": "tsc -p ./ ",
 		"watch": "tsc -watch -p ./ && cd server && npm run watch && cd ..",
 		"test-setup": "npm run compile && npm run lint && npm run copy-test-files && npm run copy-config-files",
 		"copy-test-files": "cd src && copyfiles ./test/test-files/**/*.m ./../out/ && cd ..",
@@ -353,7 +353,7 @@
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^18.19.50",
 		"@types/node-fetch": "^2.6.2",
-		"@types/vscode": "^1.67.0",
+		"@types/vscode": "^1.20.0",
 		"@typescript-eslint/eslint-plugin": "^5.36.1",
 		"@typescript-eslint/parser": "^5.36.1",
 		"@vscode/test-electron": "^2.5.2",
